--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="Font-Awesome/css/all.css">
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="shortcut icon" href="image/logo-mumtaz.png">
+    <link rel="shortcut icon" href="image/logo-mumtaz.ico">
       <title>Mumtaz Madaniah Utama</title>
   </head>
   <body>
