--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="Font-Awesome/css/all.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="shortcut icon" href="image/logo-mumtaz.ico">
-      <title>Mumtaz Madaniah Utama</title>
+      <title>Mumtaz Madaniah Utama | PT. Mumtaz Madaniah Utama Tour & Travel</title>
   </head>
   <body>
       <div class="h1">
