--- a/index.html
+++ b/index.html
@@ -7,17 +7,38 @@
     <link rel="stylesheet" type="text/css" href="Font-Awesome/css/all.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="shortcut icon" href="image/logo-mumtaz.ico">
+    <link rel="stylesheet" type="text/css" href="css/mumtaz.css">
       <title>Mumtaz Madaniah Utama | PT. Mumtaz Madaniah Utama Tour & Travel</title>
   </head>
   <body>
-      <div class="h1">
-        Percobaan
-      </div>
+
+    <div class="container-fluid">
+      <header>
+        <nav class="navbar navbar-expand navbar-dark fixed-top position-fixed bg-secondary">
+          <a href="index.html" class="pl-3">
+            <img src="image/logo-mumtaz.ico">
+            <div class="d-inline ml-2 position-relative style-brand name-brand">
+              MUMTAZ MADANIAH UTAMA
+            </div>
+          </a>
+          <ul class="navbar-nav ml-auto mb-1 mr-5">
+            <a href="" class="nav-item nav-link ml-3">Beranda</a>
+            <a href="" class="nav-item nav-link ml-4">Tentang kami</a>
+            <a href="" class="nav-item nav-link ml-3">Jenis paket</a>
+            <a href="" class="nav-item nav-link ml-3">Kontak</a>
+          </ul>
+        </nav>        
+      </header>
+        <section></section>
+      <footer></footer>      
+    </div>
+
     <script src="js/jQuery-3.6.0.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vanilla-tilt.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/mumtaz.js"></script>
   </body>
 </html>
