--- a/index.html
+++ b/index.html
@@ -10,28 +10,68 @@
     <link rel="stylesheet" type="text/css" href="css/mumtaz.css">
       <title>Mumtaz Madaniah Utama | PT. Mumtaz Madaniah Utama Tour & Travel</title>
   </head>
-  <body>
+  <body class="">
 
-    <div class="container-fluid">
       <header>
-        <nav class="navbar navbar-expand navbar-dark fixed-top position-fixed bg-secondary">
-          <a href="index.html" class="pl-3">
+        <nav class="navbar navbar-expand fixed-top position-fixed d-none d-lg-inline-flex">
+          <a href="index.html" class="pl-3" style="text-decoration: none; color: inherit;">
             <img src="image/logo-mumtaz.ico">
-            <div class="d-inline ml-2 position-relative style-brand name-brand">
+            <div class="d-inline ml-2 position-relative name-brand">
               MUMTAZ MADANIAH UTAMA
             </div>
           </a>
-          <ul class="navbar-nav ml-auto mb-1 mr-5">
-            <a href="" class="nav-item nav-link ml-3">Beranda</a>
-            <a href="" class="nav-item nav-link ml-4">Tentang kami</a>
-            <a href="" class="nav-item nav-link ml-3">Jenis paket</a>
-            <a href="" class="nav-item nav-link ml-3">Kontak</a>
+          <ul class="navbar-nav mb-lg-0 mr-5 w-100">
+            <a href="" class="nav-item nav-link ml-auto mr-1 position-relative">About</a>
+            <a href="" class="nav-item nav-link ml-4 position-relative">Price</a>
+            <a href="" class="nav-item nav-link ml-4 position-relative">Gallery</a>
+            <a href="" class="nav-item nav-link ml-3 position-relative">Contact</a>
+            <li class="nav-item nav-link ml-4 position-relative btn btn-primary">Sign Up</li>
           </ul>
-        </nav>        
+        </nav>
+        <nav class="navbar navbar-expand-lg d-lg-none bg-dark d-flex justify-content-start justify-content-md-end" style="position: relative;">
+          <div class="line-bars-menu bg-secondary d-flex flex-wrap align-items-center justify-content-center rounded">
+            <div class="line-top bg-light mt-1">&nbsp</div>
+            <div class="line-middle bg-light">&nbsp</div>
+            <div class="line-bottom bg-light mb-1">&nbsp</div>
+          </div>
+        </nav>
+          <div class="aside-menu bg-light d-lg-none">
+            <div class="text-aside-menu text-center mt-5 pt-5">About</div>
+            <div class="text-aside-menu text-center mt-5 pt-5">Price</div>
+            <div class="text-aside-menu text-center mt-5 pt-5">Gallery</div>
+            <div class="text-aside-menu text-center mt-5 pt-5">Contact</div>
+            <div class="text-aside-menu text-center mt-5 pt-5">Sign Up</div>
+          </div>
       </header>
-        <section></section>
+        <section>
+          <div class="section-top">
+            <div class="carousel slide carousel-fade position-relative d-none d-md-inline" data-ride="carousel" id="slider-carousel">
+              <div class="carousel-inner carousel-full">
+                <div class="carousel-item active">
+                  <img src="image/foto-1.jpg" class="img-fluid">
+                  <div class="dark-carousel">
+                    &nbsp
+                  </div>                  
+                </div>
+                <div class="carousel-item">
+                  <img src="image/foto-2.jpg" class="img-fluid">
+                  <div class="dark-carousel">
+                    &nbsp
+                  </div>                  
+                </div>                
+                <div class="carousel-item">
+                  <img src="image/foto-3.jpg" class="img-fluid">
+                  <div class="dark-carousel">
+                    &nbsp
+                  </div>
+                </div>                
+              </div>
+            </div>
+          </div>
+          <div class="section-middle"></div>
+          <div class="section-bottom"></div>
+        </section>
       <footer></footer>      
-    </div>
 
     <script src="js/jQuery-3.6.0.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
