--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             <div class="carousel slide carousel-fade position-relative d-none d-md-inline" data-ride="carousel" id="slider-carousel">
               <div class="carousel-inner carousel-full">
                 <div class="carousel-item active">
-                  <img src="image/foto-1.jpg" class="img-fluid">
+                  <img src="image/Foto-1.jpg" class="img-fluid">
                   <div class="dark-carousel">
                     &nbsp
                   </div>                  
                 </div>
                 <div class="carousel-item">
-                  <img src="image/foto-2.jpg" class="img-fluid">
+                  <img src="image/Foto-2.jpg" class="img-fluid">
                   <div class="dark-carousel">
                     &nbsp
                   </div>                  
                 </div>                
                 <div class="carousel-item">
-                  <img src="image/foto-3.jpg" class="img-fluid">
+                  <img src="image/Foto-3.jpg" class="img-fluid">
                   <div class="dark-carousel">
                     &nbsp
                   </div>
